# diskpilot

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  build.py  create_icon.py  disk_ops.py  gui.py  index.html  package-lock.json  package.json  requirements.txt  tailwind.config.js
scripts/: export_fixtures.py
src/: App.tsx  index.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: diskpart.rs  lib.rs  main.rs  safety.rs  wmi_disk.rs
src/components/: ActionBar.tsx  ConfirmDialog.tsx  DiskList.tsx  PartitionBar.tsx  PartitionDetails.tsx  StatusBar.tsx  TitleBar.tsx
src/lib/: format.ts
src/types/: disk.ts
