[package]
name = "diskpilot"
version = "2.0.0"
edition = "2021"

[lib]
name = "diskpilot_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "diskpilot"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = [] }
tauri-build = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
wmi = "0.14"
tempfile = "3"

[build-dependencies]
tauri-build = { version = "2", features = [] }
